--- a/_posts/2023-10-31-N2.md
+++ b/_posts/2023-10-31-N2.md
@@ -3,7 +3,7 @@ title: "Vistas especiais - Barragem de Montargil"
 date: 2023-10-22
 layout: post
 categories: Portugal
-tags: N2, Norte, Centro, Alentejo, Lisboa, Algarve
+tags: N2 Norte Centro Alentejo Lisboa Algarve
 ---
 # N2 - A Estrada que nos une
 
