--- a/_posts/2023-10-24-Lisboa.md
+++ b/_posts/2023-10-24-Lisboa.md
@@ -10,5 +10,8 @@ tags: Lisboa
 
 * Oceanário de Lisboa
 * Elevador de Santa Justa
-* Miradouro da Senhora do Monte
-* Carreira 28E dos Elétricos de Lisboa 
+* Miradouro da Senhora do Monte (at station of 28E)
+* Carreira 28E dos Elétricos de Lisboa
+
+* stay overnight at camping areas outside of Lisboa - Cascais or Costa da Caparica
+* use public transport to get to Lisboa (1,5 hours from each location)
