--- a/_posts/2023-10-24-Lisboa.md
+++ b/_posts/2023-10-24-Lisboa.md
@@ -13,5 +13,7 @@ tags: Lisboa
 * Miradouro da Senhora do Monte (at station of 28E)
 * Carreira 28E dos Elétricos de Lisboa
 
+## Overnight and Travel Times with Public Transport
+
 * stay overnight at camping areas outside of Lisboa - Cascais or Costa da Caparica
 * use public transport to get to Lisboa (1,5 hours from each location)
