added a wonderful road trip description

--- a/_posts/2023-10-31-N2.md
+++ b/_posts/2023-10-31-N2.md
@@ -8,3 +8,4 @@ tags: N2 Norte Centro Alentejo Lisboa Algarve
 # N2 - A Estrada que nos une
 
 * [N2](https://www.rotan2.pt/)
+* [A wonderful rad trip](https://www.vagamundos.pt/guia-estrada-nacional-2-roteiro/)
